WIP Работаю над карточкой твита

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Code:400,700&display=swap&subset=cyrillic');
 
 body {
+  background-color: #FDFFF8;
   font-family: 'Fira Code', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -13,17 +14,50 @@ main {
   border-left: 1px solid rgba(0, 0, 0, 0.25);
   border-right: 1px solid rgba(0, 0, 0, 0.25);
 }
-main header {
+.main--header {
   display: flex;
   justify-content: space-between;
   padding: 16px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
-main header h2 {
+.main--header h2 {
   font-weight: bold;
   font-size: 20px;
 }
-
+.story {
+  padding: 24px 32px 16px 24px;
+  display: flex;
+}
+.story--user-ava {
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+  margin-right: 16px;
+}
+.story--body--header {
+  display: flex;
+  align-items: center;
+}
+.story--body--header * {
+  margin-right: 16px;
+}
+.story--body--header h3 {
+  font-weight: bold;
+  font-size: 20px;
+}
+.story--body--header a,
+.story--body--header span {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.5);
+}
+.story--body--header a {
+  text-decoration: none;
+}
+.story--body p {
+  font-size: 16px;
+  line-height: 24px;
+  padding-top: 8px;
+}
 
 
 
