Изменил правила названия классов

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,13 +15,13 @@ main {
   border-right: 1px solid rgba(0, 0, 0, 0.25);
   padding-bottom: 25vh;
 }
-.main--header {
+.main__header {
   display: flex;
   justify-content: space-between;
   padding: 16px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
-.main--header h2 {
+.main__header h2 {
   font-weight: bold;
   font-size: 20px;
 }
@@ -30,37 +30,37 @@ main {
   display: flex;
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
-.story--user-ava {
+.story__user-ava {
   border-radius: 50%;
   width: 56px;
   height: 56px;
   margin-right: 16px;
 }
-.story--body--header {
+.story__body__header {
   display: flex;
   align-items: center;
 }
-.story--body--header * {
+.story__body__header * {
   margin-right: 16px;
 }
-.story--body--header h3 {
+.story__body__header h3 {
   font-weight: bold;
   font-size: 20px;
 }
-.story--body--header a,
-.story--body--header span {
+.story__body__header a,
+.story__body__header span {
   font-size: 14px;
   color: rgba(0, 0, 0, 0.5);
 }
-.story--body--header a {
+.story__body__header a {
   text-decoration: none;
 }
-.story--body p {
+.story__body p {
   font-size: 16px;
   line-height: 24px;
   padding-top: 8px;
 }
-.story--body--actions {
+.story__body__actions {
   display: flex;
   justify-content: space-between;
   margin-right: 140px;
@@ -68,12 +68,16 @@ main {
   color: rgba(0, 0, 0, 0.35);
   margin-top: 16px;
 }
-.story--body--actions li {
+.story__body__actions li {
   position: relative;
   display: flex;
   align-items: center;
 }
-.story--body--actions--item {
+.story__body__actions li:hover {
+  cursor: pointer;
+  filter: brightness(0.05);
+}
+.story__body__actions__item {
   position: absolute;
   left: 28px;
 }
