Добавил эффект по наведению на пункт меню

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,38 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+nav {
+  position: fixed;
+  left: calc((100vw - 600px) / 2);
+  transform: translateX(-100%);
+  padding: 24px 32px 0 0;
+}
+nav ul li {
+  font-size: 20px;
+  margin-bottom: 32px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.nav__icon {
+  width: 28px;
+  height: 28px;
+  background: #000;
+}
+.nav__icon--home {
+  mask: url(../img/home-icn.svg);
+  -webkit-mask: url(../img/home-icn.svg);
+}
+nav ul li:hover {
+  color: #0038FF;
+  background-color: rgba(0, 0, 0, 0.05);
+}
+nav ul li:hover .nav__icon--home {
+  background: #0038FF;
+}
+
+
+/* MAIN */
+
 main {
   width: 600px;
   min-height: 100vh;
