--- a/styles/main.css
+++ b/styles/main.css
@@ -1,39 +1,80 @@
 @import "reset.css";
 @import url('https://fonts.googleapis.com/css?family=Fira+Code:400,700&display=swap&subset=cyrillic');
 
+:root {
+  --light-gray: rgba(0, 0, 0, 0.25);
+  --accent-color: #0038FF;
+}
+
 body {
   background-color: #FDFFF8;
   font-family: 'Fira Code', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
+/*
+  Навигация
+*/
 nav {
   position: fixed;
   left: calc((100vw - 600px) / 2);
   transform: translateX(-100%);
   padding: 24px 32px 0 0;
 }
-nav ul li {
+.nav__menu li a {
+  display: inline-flex;
+  align-items: center;
   font-size: 20px;
-  margin-bottom: 32px;
   font-weight: bold;
-  cursor: pointer;
+  text-decoration: none;
+  padding: 16px 32px 16px 16px;
+  color: inherit;
+  border-radius: 50px;
 }
-.nav__icon {
+.nav__menu li:hover a {
+  background: rgba(0, 0, 0, 0.05);
+  color: var(--accent-color);
+}
+.nav__menu__icon {
   width: 28px;
   height: 28px;
-  background: #000;
+  background: rgb(0,0,0);
+  margin-right: 16px;
 }
-.nav__icon--home {
+.nav__menu li:hover .nav__menu__icon {
+  background: var(--accent-color);
+}
+.nav__menu__icon--home {
   mask: url(../img/home-icn.svg);
   -webkit-mask: url(../img/home-icn.svg);
 }
-nav ul li:hover {
-  color: #0038FF;
-  background-color: rgba(0, 0, 0, 0.05);
+.nav__menu__icon--bell {
+  mask: url(../img/bell-icn.svg);
+  -webkit-mask: url(../img/bell-icn.svg);
 }
-nav ul li:hover .nav__icon--home {
-  background: #0038FF;
+.nav__menu__icon--chat {
+  mask: url(../img/chat-icn.svg);
+  -webkit-mask: url(../img/chat-icn.svg);
+}
+.nav__menu__icon--bookmark {
+  mask: url(../img/bookmark-icn.svg);
+  -webkit-mask: url(../img/bookmark-icn.svg);
+}
+.nav__btn {
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  background: var(--accent-color);
+  padding: 16px 55px;
+  text-decoration: none;
+  margin-top: 32px;
+  display: block;
+  box-shadow: 6px 6px 0 rgba(0, 0, 0, 0.25);
+}
+.nav__btn:hover {
+  filter: brightness(1.25);
 }
 
 
@@ -114,7 +155,15 @@ main {
   left: 28px;
 }
 
-
+aside {
+  position: absolute;
+  right: calc((100vw - 600px) / 2);
+  transform: translateX(100%);
+}
+aside ul {
+  background-color: var(--light-gray);
+  margin-left: 32px;
+}
 
 
 
